syntax = "proto3";

package io.grpc;
option java_package = "io.grpc.examples.proto";
option java_multiple_files = true;
option java_outer_classname = "KeyValues";

message HelloRequest {
  bytes data = 1;
}

message HelloResponse {
  string name = 1;
}


service KeyValueService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}
